--- a/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_rf.csv
+++ b/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_rf.csv
@@ -1,86 +1,100 @@
 "","name","pre"
-"1","org.apache.commons.lang.ArrayUtils",0.036
-"2","org.apache.commons.lang.BitField",0
-"3","org.apache.commons.lang.BooleanUtils",0.716
-"4","org.apache.commons.lang.CharEncoding",0
-"5","org.apache.commons.lang.CharRange",0
-"6","org.apache.commons.lang.CharSet",0.008
-"7","org.apache.commons.lang.CharSetUtils",0.016
-"8","org.apache.commons.lang.CharUtils",0
-"9","org.apache.commons.lang.ClassUtils",0.13
-"10","org.apache.commons.lang.Entities",0.118
-"11","org.apache.commons.lang.Enum",0.002
-"12","org.apache.commons.lang.EnumUtils",0.016
-"13","org.apache.commons.lang.IllegalClassException",0
-"14","org.apache.commons.lang.IncompleteArgumentException",0
-"15","org.apache.commons.lang.IntHashMap",0
-"16","org.apache.commons.lang.LocaleUtils",0.644
-"17","org.apache.commons.lang.NotImplementedException",0
-"18","org.apache.commons.lang.NullArgumentException",0
-"19","org.apache.commons.lang.NumberRange",0
-"20","org.apache.commons.lang.NumberUtils",0.1
-"21","org.apache.commons.lang.ObjectUtils",0.046
-"22","org.apache.commons.lang.RandomStringUtils",0
-"23","org.apache.commons.lang.SerializationException",0
-"24","org.apache.commons.lang.SerializationUtils",0.004
-"25","org.apache.commons.lang.StringEscapeUtils",0.724
-"26","org.apache.commons.lang.StringUtils",0.178
-"27","org.apache.commons.lang.SystemUtils",0.022
-"28","org.apache.commons.lang.UnhandledException",0
-"29","org.apache.commons.lang.Validate",0
-"30","org.apache.commons.lang.ValuedEnum",0.016
-"31","org.apache.commons.lang.WordUtils",0.016
-"32","org.apache.commons.lang.builder.CompareToBuilder",0.006
-"33","org.apache.commons.lang.builder.EqualsBuilder",0.024
-"34","org.apache.commons.lang.builder.HashCodeBuilder",0.14
-"35","org.apache.commons.lang.builder.ReflectionToStringBuilder",0.05
-"36","org.apache.commons.lang.builder.StandardToStringStyle",0.004
-"37","org.apache.commons.lang.builder.ToStringBuilder",0.004
-"38","org.apache.commons.lang.builder.ToStringStyle",0.128
-"39","org.apache.commons.lang.enums.Enum",0.004
-"40","org.apache.commons.lang.enums.EnumUtils",0.016
-"41","org.apache.commons.lang.enums.ValuedEnum",0.004
-"42","org.apache.commons.lang.exception.ExceptionUtils",0.004
-"43","org.apache.commons.lang.exception.NestableDelegate",0
-"44","org.apache.commons.lang.exception.NestableError",0
-"45","org.apache.commons.lang.exception.NestableException",0
-"46","org.apache.commons.lang.exception.NestableRuntimeException",0
-"47","org.apache.commons.lang.math.DoubleRange",0
-"48","org.apache.commons.lang.math.FloatRange",0
-"49","org.apache.commons.lang.math.Fraction",0.04
-"50","org.apache.commons.lang.math.IntRange",0
-"51","org.apache.commons.lang.math.JVMRandom",0.002
-"52","org.apache.commons.lang.math.LongRange",0
-"53","org.apache.commons.lang.math.NumberRange",0
-"54","org.apache.commons.lang.math.NumberUtils",0.16
-"55","org.apache.commons.lang.math.RandomUtils",0
-"56","org.apache.commons.lang.math.Range",0
-"57","org.apache.commons.lang.mutable.MutableBoolean",0.008
-"58","org.apache.commons.lang.mutable.MutableByte",0
-"59","org.apache.commons.lang.mutable.MutableDouble",0
-"60","org.apache.commons.lang.mutable.MutableFloat",0
-"61","org.apache.commons.lang.mutable.MutableInt",0
-"62","org.apache.commons.lang.mutable.MutableLong",0
-"63","org.apache.commons.lang.mutable.MutableObject",0.02
-"64","org.apache.commons.lang.mutable.MutableShort",0
-"65","org.apache.commons.lang.text.CompositeFormat",0
-"66","org.apache.commons.lang.text.StrBuilder",0.184
-"67","org.apache.commons.lang.text.StrLookup",0.004
-"68","org.apache.commons.lang.text.StrMatcher",0.034
-"69","org.apache.commons.lang.text.StrSubstitutor",0.002
-"70","org.apache.commons.lang.text.StrTokenizer",0.024
-"71","org.apache.commons.lang.time.DateFormatUtils",0
-"72","org.apache.commons.lang.time.DateUtils",0.752
-"73","org.apache.commons.lang.time.DurationFormatUtils",0.108
-"74","org.apache.commons.lang.time.FastDateFormat",0.74
-"75","org.apache.commons.lang.time.StopWatch",0.612
-"76","org.apache.commons.lang.text.ChoiceMetaFormat",0
-"77","org.apache.commons.lang.text.DateMetaFormat",0
-"78","org.apache.commons.lang.text.DateMetaFormatSupport",0.004
-"79","org.apache.commons.lang.text.DefaultMetaFormatFactory",0.016
-"80","org.apache.commons.lang.text.ExtendedMessageFormat",0.022
-"81","org.apache.commons.lang.text.MetaFormatSupport",0.002
-"82","org.apache.commons.lang.text.MultiFormat",0
-"83","org.apache.commons.lang.text.NameKeyedMetaFormat",0
-"84","org.apache.commons.lang.text.NumberMetaFormat",0.002
-"85","org.apache.commons.lang.text.TimeMetaFormat",0
+"1","org.apache.commons.lang.AnnotationUtils",0.008
+"2","org.apache.commons.lang.ArrayUtils",0.402
+"3","org.apache.commons.lang.BitField",0
+"4","org.apache.commons.lang.BooleanUtils",0.27
+"5","org.apache.commons.lang.CharEncoding",0
+"6","org.apache.commons.lang.CharRange",0.088
+"7","org.apache.commons.lang.CharSequenceUtils",0.032
+"8","org.apache.commons.lang.CharSet",0.034
+"9","org.apache.commons.lang.CharSetUtils",0.08
+"10","org.apache.commons.lang.CharUtils",0.118
+"11","org.apache.commons.lang.ClassUtils",0.396
+"12","org.apache.commons.lang.EnumUtils",0.032
+"13","org.apache.commons.lang.JavaVersion",0.01
+"14","org.apache.commons.lang.LocaleUtils",0.036
+"15","org.apache.commons.lang.ObjectUtils",0.142
+"16","org.apache.commons.lang.RandomStringUtils",0.07
+"17","org.apache.commons.lang.Range",0.13
+"18","org.apache.commons.lang.SerializationException",0
+"19","org.apache.commons.lang.SerializationUtils",0.052
+"20","org.apache.commons.lang.StringEscapeUtils",0.004
+"21","org.apache.commons.lang.StringUtils",0.598
+"22","org.apache.commons.lang.SystemUtils",0.114
+"23","org.apache.commons.lang.Validate",0.178
+"24","org.apache.commons.lang.builder.CompareToBuilder",0.026
+"25","org.apache.commons.lang.builder.EqualsBuilder",0.02
+"26","org.apache.commons.lang.builder.HashCodeBuilder",0.232
+"27","org.apache.commons.lang.builder.IDKey",0
+"28","org.apache.commons.lang.builder.ReflectionToStringBuilder",0
+"29","org.apache.commons.lang.builder.StandardToStringStyle",0
+"30","org.apache.commons.lang.builder.ToStringBuilder",0.016
+"31","org.apache.commons.lang.builder.ToStringStyle",0.034
+"32","org.apache.commons.lang.concurrent.AtomicInitializer",0.004
+"33","org.apache.commons.lang.concurrent.AtomicSafeInitializer",0.004
+"34","org.apache.commons.lang.concurrent.BackgroundInitializer",0.082
+"35","org.apache.commons.lang.concurrent.BasicThreadFactory",0.09
+"36","org.apache.commons.lang.concurrent.CallableBackgroundInitializer",0.002
+"37","org.apache.commons.lang.concurrent.ConcurrentException",0
+"38","org.apache.commons.lang.concurrent.ConcurrentRuntimeException",0
+"39","org.apache.commons.lang.concurrent.ConcurrentUtils",0.014
+"40","org.apache.commons.lang.concurrent.ConstantInitializer",0.028
+"41","org.apache.commons.lang.concurrent.LazyInitializer",0.004
+"42","org.apache.commons.lang.concurrent.MultiBackgroundInitializer",0
+"43","org.apache.commons.lang.concurrent.TimedSemaphore",0.032
+"44","org.apache.commons.lang.event.EventListenerSupport",0.008
+"45","org.apache.commons.lang.event.EventUtils",0.032
+"46","org.apache.commons.lang.exception.CloneFailedException",0
+"47","org.apache.commons.lang.exception.ContextedException",0.038
+"48","org.apache.commons.lang.exception.ContextedRuntimeException",0.038
+"49","org.apache.commons.lang.exception.DefaultExceptionContext",0.098
+"50","org.apache.commons.lang.exception.ExceptionUtils",0.014
+"51","org.apache.commons.lang.math.Fraction",0.484
+"52","org.apache.commons.lang.math.IEEE754rUtils",0.002
+"53","org.apache.commons.lang.math.NumberUtils",0.698
+"54","org.apache.commons.lang.mutable.MutableBoolean",0.032
+"55","org.apache.commons.lang.mutable.MutableByte",0.072
+"56","org.apache.commons.lang.mutable.MutableDouble",0.01
+"57","org.apache.commons.lang.mutable.MutableFloat",0.012
+"58","org.apache.commons.lang.mutable.MutableInt",0.014
+"59","org.apache.commons.lang.mutable.MutableLong",0.014
+"60","org.apache.commons.lang.mutable.MutableObject",0.042
+"61","org.apache.commons.lang.mutable.MutableShort",0.018
+"62","org.apache.commons.lang.reflect.ConstructorUtils",0.046
+"63","org.apache.commons.lang.reflect.FieldUtils",0.042
+"64","org.apache.commons.lang.reflect.MemberUtils",0
+"65","org.apache.commons.lang.reflect.MethodUtils",0.084
+"66","org.apache.commons.lang.reflect.TypeUtils",0.344
+"67","org.apache.commons.lang.text.CompositeFormat",0.002
+"68","org.apache.commons.lang.text.ExtendedMessageFormat",0.148
+"69","org.apache.commons.lang.text.FormattableUtils",0
+"70","org.apache.commons.lang.text.StrBuilder",0.252
+"71","org.apache.commons.lang.text.StrLookup",0.004
+"72","org.apache.commons.lang.text.StrMatcher",0.016
+"73","org.apache.commons.lang.text.StrSubstitutor",0.108
+"74","org.apache.commons.lang.text.StrTokenizer",0.184
+"75","org.apache.commons.lang.text.WordUtils",0.09
+"76","org.apache.commons.lang.text.translate.AggregateTranslator",0.008
+"77","org.apache.commons.lang.text.translate.CharSequenceTranslator",0.32
+"78","org.apache.commons.lang.text.translate.CodePointTranslator",0.202
+"79","org.apache.commons.lang.text.translate.EntityArrays",0.054
+"80","org.apache.commons.lang.text.translate.LookupTranslator",0.026
+"81","org.apache.commons.lang.text.translate.NumericEntityEscaper",0
+"82","org.apache.commons.lang.text.translate.NumericEntityUnescaper",0.222
+"83","org.apache.commons.lang.text.translate.OctalUnescaper",0.016
+"84","org.apache.commons.lang.text.translate.UnicodeEscaper",0
+"85","org.apache.commons.lang.text.translate.UnicodeUnescaper",0.208
+"86","org.apache.commons.lang.time.DateFormatUtils",0.006
+"87","org.apache.commons.lang.time.DateUtils",0.492
+"88","org.apache.commons.lang.time.DurationFormatUtils",0.086
+"89","org.apache.commons.lang.time.FastDateFormat",0.258
+"90","org.apache.commons.lang.time.FormatCache",0.058
+"91","org.apache.commons.lang.time.StopWatch",0.018
+"92","org.apache.commons.lang.tuple.ImmutablePair",0.01
+"93","org.apache.commons.lang.tuple.MutablePair",0.042
+"94","org.apache.commons.lang.tuple.Pair",0.038
+"95","org.apache.commons.lang.time.FastDateParser",0.172
+"96","org.apache.commons.lang.time.FastDatePrinter",0.276
+"97","org.apache.commons.lang.tuple.ImmutableTriple",0.008
+"98","org.apache.commons.lang.tuple.MutableTriple",0.004
+"99","org.apache.commons.lang.tuple.Triple",0.002
