--- a/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_cart.csv
+++ b/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_cart.csv
@@ -1,86 +1,100 @@
 "","name","pre"
-"1","org.apache.commons.lang.ArrayUtils",0
-"2","org.apache.commons.lang.BitField",0
-"3","org.apache.commons.lang.BooleanUtils",0.6
-"4","org.apache.commons.lang.CharEncoding",0
-"5","org.apache.commons.lang.CharRange",0
-"6","org.apache.commons.lang.CharSet",0.222222222222222
-"7","org.apache.commons.lang.CharSetUtils",0
-"8","org.apache.commons.lang.CharUtils",0
-"9","org.apache.commons.lang.ClassUtils",0.222222222222222
-"10","org.apache.commons.lang.Entities",0
-"11","org.apache.commons.lang.Enum",0.222222222222222
+"1","org.apache.commons.lang.AnnotationUtils",0
+"2","org.apache.commons.lang.ArrayUtils",0.2
+"3","org.apache.commons.lang.BitField",0
+"4","org.apache.commons.lang.BooleanUtils",0.222222222222222
+"5","org.apache.commons.lang.CharEncoding",0
+"6","org.apache.commons.lang.CharRange",0.222222222222222
+"7","org.apache.commons.lang.CharSequenceUtils",0
+"8","org.apache.commons.lang.CharSet",0
+"9","org.apache.commons.lang.CharSetUtils",0
+"10","org.apache.commons.lang.CharUtils",0
+"11","org.apache.commons.lang.ClassUtils",1
 "12","org.apache.commons.lang.EnumUtils",0
-"13","org.apache.commons.lang.IllegalClassException",0
-"14","org.apache.commons.lang.IncompleteArgumentException",0
-"15","org.apache.commons.lang.IntHashMap",0
-"16","org.apache.commons.lang.LocaleUtils",0.222222222222222
-"17","org.apache.commons.lang.NotImplementedException",0
-"18","org.apache.commons.lang.NullArgumentException",0
-"19","org.apache.commons.lang.NumberRange",0
-"20","org.apache.commons.lang.NumberUtils",0
-"21","org.apache.commons.lang.ObjectUtils",0
-"22","org.apache.commons.lang.RandomStringUtils",0
-"23","org.apache.commons.lang.SerializationException",0
-"24","org.apache.commons.lang.SerializationUtils",0
-"25","org.apache.commons.lang.StringEscapeUtils",0.6
-"26","org.apache.commons.lang.StringUtils",0.222222222222222
-"27","org.apache.commons.lang.SystemUtils",0
-"28","org.apache.commons.lang.UnhandledException",0
-"29","org.apache.commons.lang.Validate",0
-"30","org.apache.commons.lang.ValuedEnum",0.5
-"31","org.apache.commons.lang.WordUtils",0
-"32","org.apache.commons.lang.builder.CompareToBuilder",0
-"33","org.apache.commons.lang.builder.EqualsBuilder",0
-"34","org.apache.commons.lang.builder.HashCodeBuilder",0
-"35","org.apache.commons.lang.builder.ReflectionToStringBuilder",0
-"36","org.apache.commons.lang.builder.StandardToStringStyle",0
-"37","org.apache.commons.lang.builder.ToStringBuilder",0
-"38","org.apache.commons.lang.builder.ToStringStyle",0
-"39","org.apache.commons.lang.enums.Enum",0.222222222222222
-"40","org.apache.commons.lang.enums.EnumUtils",0
-"41","org.apache.commons.lang.enums.ValuedEnum",0
-"42","org.apache.commons.lang.exception.ExceptionUtils",0
-"43","org.apache.commons.lang.exception.NestableDelegate",0
-"44","org.apache.commons.lang.exception.NestableError",0
-"45","org.apache.commons.lang.exception.NestableException",0
-"46","org.apache.commons.lang.exception.NestableRuntimeException",0
-"47","org.apache.commons.lang.math.DoubleRange",0
-"48","org.apache.commons.lang.math.FloatRange",0
-"49","org.apache.commons.lang.math.Fraction",0
-"50","org.apache.commons.lang.math.IntRange",0
-"51","org.apache.commons.lang.math.JVMRandom",0
-"52","org.apache.commons.lang.math.LongRange",0
-"53","org.apache.commons.lang.math.NumberRange",0
-"54","org.apache.commons.lang.math.NumberUtils",0
-"55","org.apache.commons.lang.math.RandomUtils",0
-"56","org.apache.commons.lang.math.Range",0
-"57","org.apache.commons.lang.mutable.MutableBoolean",0
-"58","org.apache.commons.lang.mutable.MutableByte",0
-"59","org.apache.commons.lang.mutable.MutableDouble",0
-"60","org.apache.commons.lang.mutable.MutableFloat",0
-"61","org.apache.commons.lang.mutable.MutableInt",0
-"62","org.apache.commons.lang.mutable.MutableLong",0
-"63","org.apache.commons.lang.mutable.MutableObject",0
-"64","org.apache.commons.lang.mutable.MutableShort",0
-"65","org.apache.commons.lang.text.CompositeFormat",0
-"66","org.apache.commons.lang.text.StrBuilder",0.222222222222222
-"67","org.apache.commons.lang.text.StrLookup",0
-"68","org.apache.commons.lang.text.StrMatcher",0
-"69","org.apache.commons.lang.text.StrSubstitutor",0
-"70","org.apache.commons.lang.text.StrTokenizer",0
-"71","org.apache.commons.lang.time.DateFormatUtils",0
-"72","org.apache.commons.lang.time.DateUtils",1
-"73","org.apache.commons.lang.time.DurationFormatUtils",0.222222222222222
-"74","org.apache.commons.lang.time.FastDateFormat",1
-"75","org.apache.commons.lang.time.StopWatch",0.222222222222222
-"76","org.apache.commons.lang.text.ChoiceMetaFormat",0
-"77","org.apache.commons.lang.text.DateMetaFormat",0
-"78","org.apache.commons.lang.text.DateMetaFormatSupport",0.2
-"79","org.apache.commons.lang.text.DefaultMetaFormatFactory",0
-"80","org.apache.commons.lang.text.ExtendedMessageFormat",0.0909090909090909
-"81","org.apache.commons.lang.text.MetaFormatSupport",0
-"82","org.apache.commons.lang.text.MultiFormat",0
-"83","org.apache.commons.lang.text.NameKeyedMetaFormat",0
-"84","org.apache.commons.lang.text.NumberMetaFormat",0
-"85","org.apache.commons.lang.text.TimeMetaFormat",0
+"13","org.apache.commons.lang.JavaVersion",0
+"14","org.apache.commons.lang.LocaleUtils",0.222222222222222
+"15","org.apache.commons.lang.ObjectUtils",0.833333333333333
+"16","org.apache.commons.lang.RandomStringUtils",0.222222222222222
+"17","org.apache.commons.lang.Range",0.4
+"18","org.apache.commons.lang.SerializationException",0
+"19","org.apache.commons.lang.SerializationUtils",0
+"20","org.apache.commons.lang.StringEscapeUtils",0
+"21","org.apache.commons.lang.StringUtils",1
+"22","org.apache.commons.lang.SystemUtils",0.222222222222222
+"23","org.apache.commons.lang.Validate",0
+"24","org.apache.commons.lang.builder.CompareToBuilder",0
+"25","org.apache.commons.lang.builder.EqualsBuilder",0
+"26","org.apache.commons.lang.builder.HashCodeBuilder",0
+"27","org.apache.commons.lang.builder.IDKey",0
+"28","org.apache.commons.lang.builder.ReflectionToStringBuilder",0
+"29","org.apache.commons.lang.builder.StandardToStringStyle",0
+"30","org.apache.commons.lang.builder.ToStringBuilder",0
+"31","org.apache.commons.lang.builder.ToStringStyle",0
+"32","org.apache.commons.lang.concurrent.AtomicInitializer",0
+"33","org.apache.commons.lang.concurrent.AtomicSafeInitializer",0
+"34","org.apache.commons.lang.concurrent.BackgroundInitializer",0
+"35","org.apache.commons.lang.concurrent.BasicThreadFactory",0
+"36","org.apache.commons.lang.concurrent.CallableBackgroundInitializer",0
+"37","org.apache.commons.lang.concurrent.ConcurrentException",0
+"38","org.apache.commons.lang.concurrent.ConcurrentRuntimeException",0
+"39","org.apache.commons.lang.concurrent.ConcurrentUtils",0.222222222222222
+"40","org.apache.commons.lang.concurrent.ConstantInitializer",0.5
+"41","org.apache.commons.lang.concurrent.LazyInitializer",0
+"42","org.apache.commons.lang.concurrent.MultiBackgroundInitializer",0
+"43","org.apache.commons.lang.concurrent.TimedSemaphore",0
+"44","org.apache.commons.lang.event.EventListenerSupport",0
+"45","org.apache.commons.lang.event.EventUtils",0
+"46","org.apache.commons.lang.exception.CloneFailedException",0
+"47","org.apache.commons.lang.exception.ContextedException",0
+"48","org.apache.commons.lang.exception.ContextedRuntimeException",0
+"49","org.apache.commons.lang.exception.DefaultExceptionContext",0
+"50","org.apache.commons.lang.exception.ExceptionUtils",0
+"51","org.apache.commons.lang.math.Fraction",1
+"52","org.apache.commons.lang.math.IEEE754rUtils",0
+"53","org.apache.commons.lang.math.NumberUtils",1
+"54","org.apache.commons.lang.mutable.MutableBoolean",0
+"55","org.apache.commons.lang.mutable.MutableByte",0
+"56","org.apache.commons.lang.mutable.MutableDouble",0
+"57","org.apache.commons.lang.mutable.MutableFloat",0
+"58","org.apache.commons.lang.mutable.MutableInt",0.222222222222222
+"59","org.apache.commons.lang.mutable.MutableLong",0.222222222222222
+"60","org.apache.commons.lang.mutable.MutableObject",0
+"61","org.apache.commons.lang.mutable.MutableShort",0.222222222222222
+"62","org.apache.commons.lang.reflect.ConstructorUtils",0
+"63","org.apache.commons.lang.reflect.FieldUtils",0
+"64","org.apache.commons.lang.reflect.MemberUtils",0
+"65","org.apache.commons.lang.reflect.MethodUtils",0.4
+"66","org.apache.commons.lang.reflect.TypeUtils",0.6
+"67","org.apache.commons.lang.text.CompositeFormat",0
+"68","org.apache.commons.lang.text.ExtendedMessageFormat",0
+"69","org.apache.commons.lang.text.FormattableUtils",0.5
+"70","org.apache.commons.lang.text.StrBuilder",0.2
+"71","org.apache.commons.lang.text.StrLookup",0
+"72","org.apache.commons.lang.text.StrMatcher",0
+"73","org.apache.commons.lang.text.StrSubstitutor",0
+"74","org.apache.commons.lang.text.StrTokenizer",0
+"75","org.apache.commons.lang.text.WordUtils",0
+"76","org.apache.commons.lang.text.translate.AggregateTranslator",0
+"77","org.apache.commons.lang.text.translate.CharSequenceTranslator",0
+"78","org.apache.commons.lang.text.translate.CodePointTranslator",0
+"79","org.apache.commons.lang.text.translate.EntityArrays",0
+"80","org.apache.commons.lang.text.translate.LookupTranslator",0.5
+"81","org.apache.commons.lang.text.translate.NumericEntityEscaper",0
+"82","org.apache.commons.lang.text.translate.NumericEntityUnescaper",0
+"83","org.apache.commons.lang.text.translate.OctalUnescaper",0
+"84","org.apache.commons.lang.text.translate.UnicodeEscaper",0
+"85","org.apache.commons.lang.text.translate.UnicodeUnescaper",0
+"86","org.apache.commons.lang.time.DateFormatUtils",0
+"87","org.apache.commons.lang.time.DateUtils",0.5
+"88","org.apache.commons.lang.time.DurationFormatUtils",0
+"89","org.apache.commons.lang.time.FastDateFormat",0
+"90","org.apache.commons.lang.time.FormatCache",0
+"91","org.apache.commons.lang.time.StopWatch",0
+"92","org.apache.commons.lang.tuple.ImmutablePair",0
+"93","org.apache.commons.lang.tuple.MutablePair",0
+"94","org.apache.commons.lang.tuple.Pair",0
+"95","org.apache.commons.lang.time.FastDateParser",0.0909090909090909
+"96","org.apache.commons.lang.time.FastDatePrinter",0.0909090909090909
+"97","org.apache.commons.lang.tuple.ImmutableTriple",0
+"98","org.apache.commons.lang.tuple.MutableTriple",0
+"99","org.apache.commons.lang.tuple.Triple",0
