--- a/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_lr.csv
+++ b/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_lr.csv
@@ -1,86 +1,100 @@
 "","name","pre"
-"1","org.apache.commons.lang.ArrayUtils",0.0597617448013359
-"2","org.apache.commons.lang.BitField",0.0471200227308404
-"3","org.apache.commons.lang.BooleanUtils",0.0843681555113689
-"4","org.apache.commons.lang.CharEncoding",0.0619745310275406
-"5","org.apache.commons.lang.CharRange",0.0628304099109203
-"6","org.apache.commons.lang.CharSet",0.0638892879009933
-"7","org.apache.commons.lang.CharSetUtils",0.0651191533422639
-"8","org.apache.commons.lang.CharUtils",0.0594314569712942
-"9","org.apache.commons.lang.ClassUtils",0.0200996641959562
-"10","org.apache.commons.lang.Entities",0.689269099123087
-"11","org.apache.commons.lang.Enum",0.0879489724649301
-"12","org.apache.commons.lang.EnumUtils",0.0440072485339485
-"13","org.apache.commons.lang.IllegalClassException",0.0576469668692417
-"14","org.apache.commons.lang.IncompleteArgumentException",0.0569502723361333
-"15","org.apache.commons.lang.IntHashMap",0.0828094713173258
-"16","org.apache.commons.lang.LocaleUtils",0.087134434982537
-"17","org.apache.commons.lang.NotImplementedException",0.0246324895301128
-"18","org.apache.commons.lang.NullArgumentException",0.0577445321851964
-"19","org.apache.commons.lang.NumberRange",0.0679684978877873
-"20","org.apache.commons.lang.NumberUtils",0.176299161458215
-"21","org.apache.commons.lang.ObjectUtils",0.0601631181488685
-"22","org.apache.commons.lang.RandomStringUtils",0.0670436162432076
-"23","org.apache.commons.lang.SerializationException",0.0161656163703972
-"24","org.apache.commons.lang.SerializationUtils",0.0661878478760851
-"25","org.apache.commons.lang.StringEscapeUtils",0.0881563634839075
-"26","org.apache.commons.lang.StringUtils",0.703689889101805
-"27","org.apache.commons.lang.SystemUtils",0.0912888989797452
-"28","org.apache.commons.lang.UnhandledException",0.0166832551834965
-"29","org.apache.commons.lang.Validate",0.0596063515685496
-"30","org.apache.commons.lang.ValuedEnum",0.0345172501901991
-"31","org.apache.commons.lang.WordUtils",0.100463202871373
-"32","org.apache.commons.lang.builder.CompareToBuilder",0.179805714624056
-"33","org.apache.commons.lang.builder.EqualsBuilder",0.156617953089645
-"34","org.apache.commons.lang.builder.HashCodeBuilder",0.0802032758140292
-"35","org.apache.commons.lang.builder.ReflectionToStringBuilder",0.000777561244159218
-"36","org.apache.commons.lang.builder.StandardToStringStyle",0.000695652369502997
-"37","org.apache.commons.lang.builder.ToStringBuilder",0.00166750031777456
-"38","org.apache.commons.lang.builder.ToStringStyle",0.122938516980956
-"39","org.apache.commons.lang.enums.Enum",0.0897500384089908
-"40","org.apache.commons.lang.enums.EnumUtils",0.0440072485339485
-"41","org.apache.commons.lang.enums.ValuedEnum",0.0375764666826439
-"42","org.apache.commons.lang.exception.ExceptionUtils",0.122557731143329
-"43","org.apache.commons.lang.exception.NestableDelegate",0.0665133983524469
-"44","org.apache.commons.lang.exception.NestableError",0.0247397342950704
-"45","org.apache.commons.lang.exception.NestableException",0.0247397342950704
-"46","org.apache.commons.lang.exception.NestableRuntimeException",0.0247397342950704
-"47","org.apache.commons.lang.math.DoubleRange",0.0385010040314827
-"48","org.apache.commons.lang.math.FloatRange",0.0380750384450564
-"49","org.apache.commons.lang.math.Fraction",0.188562001622056
-"50","org.apache.commons.lang.math.IntRange",0.0354146850597823
-"51","org.apache.commons.lang.math.JVMRandom",0.0532881915881327
-"52","org.apache.commons.lang.math.LongRange",0.0354146850597823
-"53","org.apache.commons.lang.math.NumberRange",0.0365585359485626
-"54","org.apache.commons.lang.math.NumberUtils",0.316548840703119
-"55","org.apache.commons.lang.math.RandomUtils",0.0488695470883731
-"56","org.apache.commons.lang.math.Range",0.0458558790944601
-"57","org.apache.commons.lang.mutable.MutableBoolean",0.0513036157457628
-"58","org.apache.commons.lang.mutable.MutableByte",0.0438370156465694
-"59","org.apache.commons.lang.mutable.MutableDouble",0.0415813967666771
-"60","org.apache.commons.lang.mutable.MutableFloat",0.04135149413546
-"61","org.apache.commons.lang.mutable.MutableInt",0.0445135400132764
-"62","org.apache.commons.lang.mutable.MutableLong",0.0445135400132764
-"63","org.apache.commons.lang.mutable.MutableObject",0.0544914774329351
-"64","org.apache.commons.lang.mutable.MutableShort",0.0438370156465694
-"65","org.apache.commons.lang.text.CompositeFormat",0.0544230004666061
-"66","org.apache.commons.lang.text.StrBuilder",0.393522609986201
-"67","org.apache.commons.lang.text.StrLookup",0.0603634553220372
-"68","org.apache.commons.lang.text.StrMatcher",0.0636784202608317
-"69","org.apache.commons.lang.text.StrSubstitutor",0.0290589097232461
-"70","org.apache.commons.lang.text.StrTokenizer",0.0405710031674321
-"71","org.apache.commons.lang.time.DateFormatUtils",0.0289015654227943
-"72","org.apache.commons.lang.time.DateUtils",0.194005025885185
-"73","org.apache.commons.lang.time.DurationFormatUtils",0.263271815396254
-"74","org.apache.commons.lang.time.FastDateFormat",0.537303479602176
-"75","org.apache.commons.lang.time.StopWatch",0.0818688927244073
-"76","org.apache.commons.lang.text.ChoiceMetaFormat",0.0206825000756337
-"77","org.apache.commons.lang.text.DateMetaFormat",0.0129716319032914
-"78","org.apache.commons.lang.text.DateMetaFormatSupport",0.025679700846835
-"79","org.apache.commons.lang.text.DefaultMetaFormatFactory",0.0177753013138514
-"80","org.apache.commons.lang.text.ExtendedMessageFormat",0.0219314139582076
-"81","org.apache.commons.lang.text.MetaFormatSupport",0.0240629375978565
-"82","org.apache.commons.lang.text.MultiFormat",0.023019309453363
-"83","org.apache.commons.lang.text.NameKeyedMetaFormat",0.0253047558247
-"84","org.apache.commons.lang.text.NumberMetaFormat",0.0241881761691656
-"85","org.apache.commons.lang.text.TimeMetaFormat",0.0129886696962596
+"1","org.apache.commons.lang.AnnotationUtils",0.0621722698555481
+"2","org.apache.commons.lang.ArrayUtils",0.149698032666338
+"3","org.apache.commons.lang.BitField",0.0471200227308404
+"4","org.apache.commons.lang.BooleanUtils",0.128119542966167
+"5","org.apache.commons.lang.CharEncoding",0.0616391267413954
+"6","org.apache.commons.lang.CharRange",0.0811681961651897
+"7","org.apache.commons.lang.CharSequenceUtils",0.0666563698257436
+"8","org.apache.commons.lang.CharSet",0.0622560054646019
+"9","org.apache.commons.lang.CharSetUtils",0.0508277586700129
+"10","org.apache.commons.lang.CharUtils",0.0575630514069006
+"11","org.apache.commons.lang.ClassUtils",0.0283520201669481
+"12","org.apache.commons.lang.EnumUtils",0.0358987347740616
+"13","org.apache.commons.lang.JavaVersion",0.0607682254713191
+"14","org.apache.commons.lang.LocaleUtils",0.0950129912066029
+"15","org.apache.commons.lang.ObjectUtils",0.0592192666957164
+"16","org.apache.commons.lang.RandomStringUtils",0.0851038631531377
+"17","org.apache.commons.lang.Range",0.074307948752957
+"18","org.apache.commons.lang.SerializationException",0.0551840761098742
+"19","org.apache.commons.lang.SerializationUtils",0.100788705790423
+"20","org.apache.commons.lang.StringEscapeUtils",0.082572473043623
+"21","org.apache.commons.lang.StringUtils",0.987578232131134
+"22","org.apache.commons.lang.SystemUtils",0.0793675162850448
+"23","org.apache.commons.lang.Validate",0.0834811355965081
+"24","org.apache.commons.lang.builder.CompareToBuilder",0.191646687429608
+"25","org.apache.commons.lang.builder.EqualsBuilder",0.148614899707282
+"26","org.apache.commons.lang.builder.HashCodeBuilder",0.114748870264777
+"27","org.apache.commons.lang.builder.IDKey",0.0594870262347506
+"28","org.apache.commons.lang.builder.ReflectionToStringBuilder",0.000621891358811377
+"29","org.apache.commons.lang.builder.StandardToStringStyle",0.000905106330857604
+"30","org.apache.commons.lang.builder.ToStringBuilder",0.00177449254547752
+"31","org.apache.commons.lang.builder.ToStringStyle",0.11443654136594
+"32","org.apache.commons.lang.concurrent.AtomicInitializer",0.0587694804674394
+"33","org.apache.commons.lang.concurrent.AtomicSafeInitializer",0.0594126660578525
+"34","org.apache.commons.lang.concurrent.BackgroundInitializer",0.0493664384869681
+"35","org.apache.commons.lang.concurrent.BasicThreadFactory",0.0801476249740701
+"36","org.apache.commons.lang.concurrent.CallableBackgroundInitializer",0.0310763615787373
+"37","org.apache.commons.lang.concurrent.ConcurrentException",0.0542862897653615
+"38","org.apache.commons.lang.concurrent.ConcurrentRuntimeException",0.0542862897653615
+"39","org.apache.commons.lang.concurrent.ConcurrentUtils",0.065555006271872
+"40","org.apache.commons.lang.concurrent.ConstantInitializer",0.0568776496535945
+"41","org.apache.commons.lang.concurrent.LazyInitializer",0.0594126660578525
+"42","org.apache.commons.lang.concurrent.MultiBackgroundInitializer",0.0447972079032894
+"43","org.apache.commons.lang.concurrent.TimedSemaphore",0.0655279627625784
+"44","org.apache.commons.lang.event.EventListenerSupport",0.0574510468687636
+"45","org.apache.commons.lang.event.EventUtils",0.0636495563810366
+"46","org.apache.commons.lang.exception.CloneFailedException",0.056025455723349
+"47","org.apache.commons.lang.exception.ContextedException",0.0629922198401765
+"48","org.apache.commons.lang.exception.ContextedRuntimeException",0.0629922198401765
+"49","org.apache.commons.lang.exception.DefaultExceptionContext",0.106509169306957
+"50","org.apache.commons.lang.exception.ExceptionUtils",0.104300755460961
+"51","org.apache.commons.lang.math.Fraction",0.253032909350969
+"52","org.apache.commons.lang.math.IEEE754rUtils",0.0688753879085327
+"53","org.apache.commons.lang.math.NumberUtils",0.439445595871626
+"54","org.apache.commons.lang.mutable.MutableBoolean",0.0509146573169707
+"55","org.apache.commons.lang.mutable.MutableByte",0.0458762156817917
+"56","org.apache.commons.lang.mutable.MutableDouble",0.0486401003284883
+"57","org.apache.commons.lang.mutable.MutableFloat",0.0473592069939111
+"58","org.apache.commons.lang.mutable.MutableInt",0.0473193800713902
+"59","org.apache.commons.lang.mutable.MutableLong",0.0473193800713902
+"60","org.apache.commons.lang.mutable.MutableObject",0.0581802160860687
+"61","org.apache.commons.lang.mutable.MutableShort",0.046859960538659
+"62","org.apache.commons.lang.reflect.ConstructorUtils",0.0594328833865986
+"63","org.apache.commons.lang.reflect.FieldUtils",0.0736371013069946
+"64","org.apache.commons.lang.reflect.MemberUtils",0.0573551987456957
+"65","org.apache.commons.lang.reflect.MethodUtils",0.0965860993168462
+"66","org.apache.commons.lang.reflect.TypeUtils",0.268901919556591
+"67","org.apache.commons.lang.text.CompositeFormat",0.0553229154712307
+"68","org.apache.commons.lang.text.ExtendedMessageFormat",0.128474147244882
+"69","org.apache.commons.lang.text.FormattableUtils",0.0548591715794983
+"70","org.apache.commons.lang.text.StrBuilder",0.454201205681391
+"71","org.apache.commons.lang.text.StrLookup",0.0616891863912126
+"72","org.apache.commons.lang.text.StrMatcher",0.0661562714123783
+"73","org.apache.commons.lang.text.StrSubstitutor",0.0354396808113078
+"74","org.apache.commons.lang.text.StrTokenizer",0.0471656700165611
+"75","org.apache.commons.lang.text.WordUtils",0.166578864224014
+"76","org.apache.commons.lang.text.translate.AggregateTranslator",0.0504666975898658
+"77","org.apache.commons.lang.text.translate.CharSequenceTranslator",0.0754893389292252
+"78","org.apache.commons.lang.text.translate.CodePointTranslator",0.0480905335392671
+"79","org.apache.commons.lang.text.translate.EntityArrays",0.186680229282176
+"80","org.apache.commons.lang.text.translate.LookupTranslator",0.0557658735683925
+"81","org.apache.commons.lang.text.translate.NumericEntityEscaper",0.04491391282235
+"82","org.apache.commons.lang.text.translate.NumericEntityUnescaper",0.0485319327709219
+"83","org.apache.commons.lang.text.translate.OctalUnescaper",0.0515870044723101
+"84","org.apache.commons.lang.text.translate.UnicodeEscaper",0.0469412142279391
+"85","org.apache.commons.lang.text.translate.UnicodeUnescaper",0.0410191922901532
+"86","org.apache.commons.lang.time.DateFormatUtils",0.036732188786021
+"87","org.apache.commons.lang.time.DateUtils",0.267705694974024
+"88","org.apache.commons.lang.time.DurationFormatUtils",0.208378885680408
+"89","org.apache.commons.lang.time.FastDateFormat",0.0173182051754323
+"90","org.apache.commons.lang.time.FormatCache",0.0796198999189892
+"91","org.apache.commons.lang.time.StopWatch",0.0469788983345531
+"92","org.apache.commons.lang.tuple.ImmutablePair",0.0201567448277834
+"93","org.apache.commons.lang.tuple.MutablePair",0.0188219837913437
+"94","org.apache.commons.lang.tuple.Pair",0.0257139892379659
+"95","org.apache.commons.lang.time.FastDateParser",0.149850757649424
+"96","org.apache.commons.lang.time.FastDatePrinter",0.228935485333309
+"97","org.apache.commons.lang.tuple.ImmutableTriple",0.00806160091565356
+"98","org.apache.commons.lang.tuple.MutableTriple",0.00731842692480187
+"99","org.apache.commons.lang.tuple.Triple",0.0100280964230725
