--- a/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_naivebayes.csv
+++ b/data/prediction/lang/merged_with_DIV/class/last_version_prob/valid.data_naivebayes.csv
@@ -1,86 +1,100 @@
 "","name","pre"
-"1","org.apache.commons.lang.ArrayUtils",1
-"2","org.apache.commons.lang.BitField",0.196037696455629
-"3","org.apache.commons.lang.BooleanUtils",0.555499389171559
-"4","org.apache.commons.lang.CharEncoding",0.200411223050447
-"5","org.apache.commons.lang.CharRange",0.194678445680974
-"6","org.apache.commons.lang.CharSet",0.164424907364892
-"7","org.apache.commons.lang.CharSetUtils",0.370964054700205
-"8","org.apache.commons.lang.CharUtils",0.198665878931937
-"9","org.apache.commons.lang.ClassUtils",0.574436705799643
-"10","org.apache.commons.lang.Entities",0.994548774095249
-"11","org.apache.commons.lang.Enum",0.361906560200852
-"12","org.apache.commons.lang.EnumUtils",0.309678771386749
-"13","org.apache.commons.lang.IllegalClassException",0.0879179677530497
-"14","org.apache.commons.lang.IncompleteArgumentException",0.0921452615701584
-"15","org.apache.commons.lang.IntHashMap",0.189846847683345
-"16","org.apache.commons.lang.LocaleUtils",0.191090084214522
-"17","org.apache.commons.lang.NotImplementedException",0.0845738465727226
-"18","org.apache.commons.lang.NullArgumentException",0.0935247904203916
-"19","org.apache.commons.lang.NumberRange",0.207756926374373
-"20","org.apache.commons.lang.NumberUtils",0.487607943826941
-"21","org.apache.commons.lang.ObjectUtils",0.128203346466644
-"22","org.apache.commons.lang.RandomStringUtils",0.195824584000775
-"23","org.apache.commons.lang.SerializationException",0.00368614330440308
-"24","org.apache.commons.lang.SerializationUtils",0.288118779898087
-"25","org.apache.commons.lang.StringEscapeUtils",0.485464303468776
-"26","org.apache.commons.lang.StringUtils",1
-"27","org.apache.commons.lang.SystemUtils",0.213698257536309
-"28","org.apache.commons.lang.UnhandledException",0.00465325589266423
-"29","org.apache.commons.lang.Validate",0.337089681319643
-"30","org.apache.commons.lang.ValuedEnum",0.0778566189857833
-"31","org.apache.commons.lang.WordUtils",0.320929094600674
-"32","org.apache.commons.lang.builder.CompareToBuilder",0.605928340663568
-"33","org.apache.commons.lang.builder.EqualsBuilder",0.435150079911019
-"34","org.apache.commons.lang.builder.HashCodeBuilder",0.282295342118895
-"35","org.apache.commons.lang.builder.ReflectionToStringBuilder",0.98618008136776
-"36","org.apache.commons.lang.builder.StandardToStringStyle",0.559788878146266
-"37","org.apache.commons.lang.builder.ToStringBuilder",0.905141139586811
-"38","org.apache.commons.lang.builder.ToStringStyle",0.9999999983749
-"39","org.apache.commons.lang.enums.Enum",0.369765905090439
-"40","org.apache.commons.lang.enums.EnumUtils",0.309678771386749
-"41","org.apache.commons.lang.enums.ValuedEnum",0.0775922989253394
-"42","org.apache.commons.lang.exception.ExceptionUtils",0.884388508082401
-"43","org.apache.commons.lang.exception.NestableDelegate",0.212786971050977
-"44","org.apache.commons.lang.exception.NestableError",0.0864350911527868
-"45","org.apache.commons.lang.exception.NestableException",0.0864350911527868
-"46","org.apache.commons.lang.exception.NestableRuntimeException",0.148747648010836
-"47","org.apache.commons.lang.math.DoubleRange",0.104536825409258
-"48","org.apache.commons.lang.math.FloatRange",0.104286897957037
-"49","org.apache.commons.lang.math.Fraction",0.273785600168843
-"50","org.apache.commons.lang.math.IntRange",0.101607174299742
-"51","org.apache.commons.lang.math.JVMRandom",0.0827525722220941
-"52","org.apache.commons.lang.math.LongRange",0.101607174299742
-"53","org.apache.commons.lang.math.NumberRange",0.0894158950381863
-"54","org.apache.commons.lang.math.NumberUtils",0.999998644691551
-"55","org.apache.commons.lang.math.RandomUtils",0.181367331750948
-"56","org.apache.commons.lang.math.Range",0.981592512525712
-"57","org.apache.commons.lang.mutable.MutableBoolean",0.088753751144522
-"58","org.apache.commons.lang.mutable.MutableByte",0.0847922422463014
-"59","org.apache.commons.lang.mutable.MutableDouble",0.0783211695864438
-"60","org.apache.commons.lang.mutable.MutableFloat",0.0783005192058533
-"61","org.apache.commons.lang.mutable.MutableInt",0.0843564707025131
-"62","org.apache.commons.lang.mutable.MutableLong",0.0843564707025131
-"63","org.apache.commons.lang.mutable.MutableObject",0.194436806854295
-"64","org.apache.commons.lang.mutable.MutableShort",0.0847922422463014
-"65","org.apache.commons.lang.text.CompositeFormat",0.0827679914499917
-"66","org.apache.commons.lang.text.StrBuilder",0.999999999753764
-"67","org.apache.commons.lang.text.StrLookup",0.197606575964479
-"68","org.apache.commons.lang.text.StrMatcher",0.990113607454968
-"69","org.apache.commons.lang.text.StrSubstitutor",0.452910257748869
-"70","org.apache.commons.lang.text.StrTokenizer",0.647744651521223
-"71","org.apache.commons.lang.time.DateFormatUtils",0.207381470343256
-"72","org.apache.commons.lang.time.DateUtils",0.374366564804284
-"73","org.apache.commons.lang.time.DurationFormatUtils",0.527137359806698
-"74","org.apache.commons.lang.time.FastDateFormat",0.999999999946753
-"75","org.apache.commons.lang.time.StopWatch",0.959142556831598
-"76","org.apache.commons.lang.text.ChoiceMetaFormat",1.22423601968854e-28
-"77","org.apache.commons.lang.text.DateMetaFormat",1.86985407486046e-26
-"78","org.apache.commons.lang.text.DateMetaFormatSupport",2.41915043620823e-52
-"79","org.apache.commons.lang.text.DefaultMetaFormatFactory",2.08671582956297e-18
-"80","org.apache.commons.lang.text.ExtendedMessageFormat",4.97216093395116e-18
-"81","org.apache.commons.lang.text.MetaFormatSupport",1.09414288168791e-145
-"82","org.apache.commons.lang.text.MultiFormat",2.8921869189797e-25
-"83","org.apache.commons.lang.text.NameKeyedMetaFormat",2.17431989461587e-30
-"84","org.apache.commons.lang.text.NumberMetaFormat",1.24963119917625e-23
-"85","org.apache.commons.lang.text.TimeMetaFormat",7.54220978937903e-25
+"1","org.apache.commons.lang.AnnotationUtils",0.298062064908774
+"2","org.apache.commons.lang.ArrayUtils",1
+"3","org.apache.commons.lang.BitField",0.196037696455629
+"4","org.apache.commons.lang.BooleanUtils",0.806421939565514
+"5","org.apache.commons.lang.CharEncoding",0.21597527547311
+"6","org.apache.commons.lang.CharRange",0.18704289977777
+"7","org.apache.commons.lang.CharSequenceUtils",0.304270702171543
+"8","org.apache.commons.lang.CharSet",0.18011603452404
+"9","org.apache.commons.lang.CharSetUtils",0.305042677056214
+"10","org.apache.commons.lang.CharUtils",0.407509044090212
+"11","org.apache.commons.lang.ClassUtils",0.946020865861754
+"12","org.apache.commons.lang.EnumUtils",2.19853313398911e-07
+"13","org.apache.commons.lang.JavaVersion",0.194215201007167
+"14","org.apache.commons.lang.LocaleUtils",0.189780901486294
+"15","org.apache.commons.lang.ObjectUtils",0.820021831343844
+"16","org.apache.commons.lang.RandomStringUtils",0.222888632129102
+"17","org.apache.commons.lang.Range",0.177653474728575
+"18","org.apache.commons.lang.SerializationException",0.0885097939044108
+"19","org.apache.commons.lang.SerializationUtils",0.0862782573621128
+"20","org.apache.commons.lang.StringEscapeUtils",0.995963139608694
+"21","org.apache.commons.lang.StringUtils",1
+"22","org.apache.commons.lang.SystemUtils",0.184397463339337
+"23","org.apache.commons.lang.Validate",0.277505116357812
+"24","org.apache.commons.lang.builder.CompareToBuilder",0.59929484856182
+"25","org.apache.commons.lang.builder.EqualsBuilder",0.690013012867078
+"26","org.apache.commons.lang.builder.HashCodeBuilder",0.547596647101492
+"27","org.apache.commons.lang.builder.IDKey",0.204147201898046
+"28","org.apache.commons.lang.builder.ReflectionToStringBuilder",0.685319836492309
+"29","org.apache.commons.lang.builder.StandardToStringStyle",0.561287447983622
+"30","org.apache.commons.lang.builder.ToStringBuilder",0.861891021365978
+"31","org.apache.commons.lang.builder.ToStringStyle",0.999999951528412
+"32","org.apache.commons.lang.concurrent.AtomicInitializer",0.188902937007762
+"33","org.apache.commons.lang.concurrent.AtomicSafeInitializer",0.188563537308163
+"34","org.apache.commons.lang.concurrent.BackgroundInitializer",0.36743691775491
+"35","org.apache.commons.lang.concurrent.BasicThreadFactory",0.182117202850731
+"36","org.apache.commons.lang.concurrent.CallableBackgroundInitializer",0.0887520365910689
+"37","org.apache.commons.lang.concurrent.ConcurrentException",0.084836816178528
+"38","org.apache.commons.lang.concurrent.ConcurrentRuntimeException",0.084836816178528
+"39","org.apache.commons.lang.concurrent.ConcurrentUtils",0.464178431539292
+"40","org.apache.commons.lang.concurrent.ConstantInitializer",0.237302781147263
+"41","org.apache.commons.lang.concurrent.LazyInitializer",0.188563537308163
+"42","org.apache.commons.lang.concurrent.MultiBackgroundInitializer",0.108624203215438
+"43","org.apache.commons.lang.concurrent.TimedSemaphore",0.196312403260496
+"44","org.apache.commons.lang.event.EventListenerSupport",0.190281631129435
+"45","org.apache.commons.lang.event.EventUtils",0.287531098428696
+"46","org.apache.commons.lang.exception.CloneFailedException",0.0924534378962302
+"47","org.apache.commons.lang.exception.ContextedException",0.0860990845609851
+"48","org.apache.commons.lang.exception.ContextedRuntimeException",0.0860990845609851
+"49","org.apache.commons.lang.exception.DefaultExceptionContext",0.994512895588544
+"50","org.apache.commons.lang.exception.ExceptionUtils",0.432826467433188
+"51","org.apache.commons.lang.math.Fraction",0.363041941419231
+"52","org.apache.commons.lang.math.IEEE754rUtils",0.31433003054089
+"53","org.apache.commons.lang.math.NumberUtils",0.981532569475087
+"54","org.apache.commons.lang.mutable.MutableBoolean",0.196520068450661
+"55","org.apache.commons.lang.mutable.MutableByte",0.0858559530189023
+"56","org.apache.commons.lang.mutable.MutableDouble",0.0879068949078804
+"57","org.apache.commons.lang.mutable.MutableFloat",0.0853551292500484
+"58","org.apache.commons.lang.mutable.MutableInt",0.0837359122579827
+"59","org.apache.commons.lang.mutable.MutableLong",0.0837359122579827
+"60","org.apache.commons.lang.mutable.MutableObject",0.182088374638581
+"61","org.apache.commons.lang.mutable.MutableShort",0.0841956193150002
+"62","org.apache.commons.lang.reflect.ConstructorUtils",0.528863354585533
+"63","org.apache.commons.lang.reflect.FieldUtils",0.457719609771654
+"64","org.apache.commons.lang.reflect.MemberUtils",0.181640450100412
+"65","org.apache.commons.lang.reflect.MethodUtils",0.626600664835098
+"66","org.apache.commons.lang.reflect.TypeUtils",0.800448179453309
+"67","org.apache.commons.lang.text.CompositeFormat",0.0826915347347756
+"68","org.apache.commons.lang.text.ExtendedMessageFormat",0.23361192417799
+"69","org.apache.commons.lang.text.FormattableUtils",0.236106348217579
+"70","org.apache.commons.lang.text.StrBuilder",0.999999999162145
+"71","org.apache.commons.lang.text.StrLookup",0.199057171446808
+"72","org.apache.commons.lang.text.StrMatcher",0.995793149865861
+"73","org.apache.commons.lang.text.StrSubstitutor",0.610881803966999
+"74","org.apache.commons.lang.text.StrTokenizer",0.782586200910067
+"75","org.apache.commons.lang.text.WordUtils",0.937943884413519
+"76","org.apache.commons.lang.text.translate.AggregateTranslator",0.0850055157120161
+"77","org.apache.commons.lang.text.translate.CharSequenceTranslator",0.999999425487085
+"78","org.apache.commons.lang.text.translate.CodePointTranslator",0.238887065469655
+"79","org.apache.commons.lang.text.translate.EntityArrays",0.253216009345822
+"80","org.apache.commons.lang.text.translate.LookupTranslator",0.0912897318539295
+"81","org.apache.commons.lang.text.translate.NumericEntityEscaper",0.00293771645509347
+"82","org.apache.commons.lang.text.translate.NumericEntityUnescaper",0.000980794742521994
+"83","org.apache.commons.lang.text.translate.OctalUnescaper",0.0924680396658354
+"84","org.apache.commons.lang.text.translate.UnicodeEscaper",0.00292336358723689
+"85","org.apache.commons.lang.text.translate.UnicodeUnescaper",0.999999974522455
+"86","org.apache.commons.lang.time.DateFormatUtils",0.184553678784014
+"87","org.apache.commons.lang.time.DateUtils",0.904006502404465
+"88","org.apache.commons.lang.time.DurationFormatUtils",0.398126690385476
+"89","org.apache.commons.lang.time.FastDateFormat",8.66787962462288e-156
+"90","org.apache.commons.lang.time.FormatCache",0.179066640655023
+"91","org.apache.commons.lang.time.StopWatch",0.185289837678038
+"92","org.apache.commons.lang.tuple.ImmutablePair",0.0946015383813021
+"93","org.apache.commons.lang.tuple.MutablePair",0.0956175325378657
+"94","org.apache.commons.lang.tuple.Pair",0.493468982799357
+"95","org.apache.commons.lang.time.FastDateParser",1
+"96","org.apache.commons.lang.time.FastDatePrinter",1
+"97","org.apache.commons.lang.tuple.ImmutableTriple",2.98046144962221e-23
+"98","org.apache.commons.lang.tuple.MutableTriple",1.64188080491859e-22
+"99","org.apache.commons.lang.tuple.Triple",8.66377530568476e-48
