rename the metric files

--- a/3rd/prediction/lang/prob/lr_4_coefficients.csv
+++ b/3rd/prediction/lang/prob/lr_4_coefficients.csv
@@ -1,2 +1,4 @@
 "Estimate","Std. Error","z value","Pr(>|z|)"
 "(Intercept)",-3.68887945375967,0.715881760496558,-5.1529172236501,2.56465189339468e-07
+"Estimate","Std. Error","z value","Pr(>|z|)"
+"(Intercept)",-3.68887945375967,0.715881760496558,-5.1529172236501,2.56465189339468e-07
